* Unreleased
** Added
** Changed
** Fixed
** Removed

* 0.0.2 - 2016-11-01
** Added
+ Created xeh tool in C for more cross platform debugging
+ Created M0 in hex2
+ Documented build steps in notes.org
+ Imported CMPSKIP instructions that operate on 2 registers
+ Imported CMPJUMP instructions that operate on 3 registers
+ Incorporated bounds checking on all vm->Memory accesses
+ Wrote the forth implementation in assembly

** Changed
+ Renamed xeh1 files to match current naming standard
+ created roms/ to store previously built roms and expanded .gitignore to prevent binary blobs from being checked in.
+ Revised stage0 Monitor to utilize ANDI and updated the Hex0 version to incorporate the enhancements made previously

** Fixed
+ Fixed leading char bug in M0
+ Updated Checksums to reflect updates in stage1_assembler-2
+ Corrected CMPSKIP(u) to CMPSKIP(u)I to match current naming scheme for instructions
+ Corrected CMPJUMP(u) to CMPJUMP(u)I to match current naming scheme for instructions

** Removed

* 0.0.1 - 2016-10-02
** Added
+ Initial draft of change log added

** Changed
+ Reorganization of Files to group files by stage

** Fixed
+ Line Macro assembler M0 is now self hosting